--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       id="portfolio"
       class="container-fluid mt-5 text-center text-lg-start border-top hero-5 bg-secondary"
     >
-      <div class="row align-items-center mt-5 pb-5 ">
+      <div class="row align-items-center mt-5 mt-md-2 mt-lg-5 pb-5 ">
         <div class="col-12 text-center">
           <h1 class="pt-4 pb-4 text-light">Portfolio</h1>
         </div>
@@ -249,7 +249,7 @@
     <!-- Contact -->
     <section
       id="contact"
-      class="container mt-5 text-center text-md-start border-top bg-light"
+      class="container mt-5 text-center text-md-start border-top"
     >
       <div class="row align-items-center mt-5 pb-5 justify-content-center">
         <div class="col-12 text-center">
@@ -283,12 +283,7 @@
                   <textarea class="form-control" id="message" name="message" rows="5" placeholder="Message" ></textarea>
                 </div>
               </div>
-              <div class="col-md-12 text-center my-3">
-                <!-- <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div> -->
-              </div>
-              <div class="col-md-12 text-center">
+              <div class="col-md-12 text-center mt-3">
                 <button type="submit" class="btn btn-success" onclick="validateForm()">Send Message</button>
               </div>
               <div class="errmsg"> 
@@ -305,9 +300,11 @@
     <!-- footer -->
     <footer class="bg-dark text-light text-center">
       <a class="text-light" target="_blank" href="https://www.facebook.com/sarathr4u143"><i class="fa-brands fa-facebook fa-2x pe-3"></i></a>
-      <a class="text-light" target="_blank" href="https://instagram.com/sarath_rajan__?igshid=ZGUzMzM3NWJiOQ=="><i class="fa-brands fa-instagram fa-2x pe-3"></i></a>
+      <a class="text-light" target="_blank" href="https://www.instagram.com/sarath_rajan__/"><i class="fa-brands fa-instagram fa-2x pe-3"></i></a>
       <a class="text-light" target="_blank" href="https://www.linkedin.com/in/sarath-rajan-92109b145/"><i class="fa-brands fa-linkedin fa-2x pe-3"></i></a>
-      <a class="text-light" target="_blank" href="https://studio.youtube.com/channel/UC1oCYgrfqPZQV_uMzxlITLQ/editing/images"><i class="fa-brands fa-youtube fa-2x pe-3"></i></a>
+      <a class="text-light" target="_blank" href="https://www.youtube.com/channel/UC1oCYgrfqPZQV_uMzxlITLQ"><i class="fa-brands fa-youtube fa-2x pe-3"></i></a>
+      <a class="text-light" target="_blank" href="https://github.com/sarathraj92"><i class="fa-brands fa-github fa-2x pe-3"></i></a>
+
     </footer>
     <script src="./main.js"></script>
 
