--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
         <div class="col-12 text-center">
           <h1 class="pt-4 pb-4">Contact me</h1>
         </div>
-        <div class="col-12 col-md-8 col-md-10">
-          <form id="form" method="" role="form" class="php-email-form">
+        <div class="col-12 col-md-8 ">
+          <form id="form" role="form" class="php-email-form">
             <div class="row">
               <div class="col-md-12 mb-3">
                 <div class="form-group">
@@ -270,7 +270,7 @@
               </div>
               <div class="col-md-12 mb-3">
                 <div class="form-group">  
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" >
+                  <input type="text" class="form-control" name="email" id="email" placeholder="Your Email" >
                 </div>
               </div>
               <div class="col-md-12 mb-3">
@@ -284,7 +284,7 @@
                 </div>
               </div>
               <div class="col-md-12 text-center mt-3">
-                <button type="submit" class="btn btn-success" onclick="validateForm()">Send Message</button>
+                <button type="submit" class="btn btn-success" >Send Message</button>
               </div>
               <div class="errmsg"> 
                 <span id="msg1"></span>
@@ -309,10 +309,10 @@
     <script src="./main.js"></script>
 
     <!-- bootstrap -->
-    <script
+    <!-- <script
       async
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-    ></script>
+    ></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   </body>
