--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="col-12 text-center">
           <h1 class="pt-4 pb-4 text-light">Portfolio</h1>
         </div>
-        <div class="col-12 col-lg-3 col-md-6 d-flex justify-content-center">
+        <div class="col-12 col-lg-3 col-md-3 d-flex justify-content-center">
           <div class="card mt-3" style="max-width: 16rem">
             <img
               src="images/hero-5-1.jpg"
@@ -179,7 +179,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-3 col-md-6 d-flex justify-content-center">
+        <div class="col-12 col-lg-3 col-md-3 d-flex justify-content-center">
           <div class="card mt-3" style="max-width: 16rem">
             <img
               src="images/hero-5-2.jpg"
@@ -189,7 +189,7 @@
             <div class="card-body">
               <h5 class="card-title">ADNOC</h5>
               <p class="card-text">
-                A OIL REFINERY themed website built using HTML and CSS.
+                A oil REFINERY themed website built using HTML and CSS.
               </p>
               <a
                 href="https://sarathraj92.github.io/ADNOC-Clone/"
@@ -200,7 +200,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-3 col-md-6 d-flex justify-content-center">
+        <div class="col-12 col-lg-3 col-md-3 d-flex justify-content-center">
           <div class="card mt-3" style="max-width: 16rem">
             <img
               src="images/hero-5-3.jpg"
@@ -210,7 +210,7 @@
             <div class="card-body">
               <h5 class="card-title">Salesforce</h5>
               <p class="card-text">
-                A clone of the famous Salesforce website built using HTML,CSS,BOOTSTRAP.
+                A clone of the famous Salesforce website built using HTML,CSS.
               </p>
               <a
                 href="https://sarathraj92.github.io/Salesforce-clone/"
@@ -221,7 +221,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-3 col-md-6 d-flex justify-content-center">
+        <div class="col-12 col-lg-3 col-md-3 d-flex justify-content-center">
           <div class="card mt-3" style="max-width: 16rem">
             <img
               src="images/hero-5-4.jpg"
@@ -231,8 +231,7 @@
             <div class="card-body">
               <h5 class="card-title">Cummins</h5>
               <p class="card-text">
-                Assisted in this project which was built using HTML, CSS, Bootstrap and
-                Javascript
+                Assisted in this project which was built using HTML, CSS.
               </p>
               <a
                 href="https://joeleldho02.github.io/cummins-clone/"
@@ -309,10 +308,7 @@
     <script src="./main.js"></script>
 
     <!-- bootstrap -->
-    <!-- <script
-      async
-      src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-    ></script> -->
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   </body>
